--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="hero-body">
         <h1>bummer!</h1>
         <p>What you're looking for isn't here!</p>
-        <a href="https://inkoop.now.sh">Take me there</a>
+        <a href="https://inkoop.vercel.app/">Take me there</a>
       </div>
     </section>
   </main>
